// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flawEditView > should render error message when \`getFlaw\` fails 1`] = `
"<main data-v-fc54c7d5="">
  <!--v-if-->
  <div data-v-fc54c7d5="">
    <div data-v-fc54c7d5="" class="row justify-content-around">
      <div data-v-fc54c7d5="" class="m-5 col-lg-6 col-md-8 col-sm-12">
        <div data-v-fc54c7d5="" class="alert alert-warning" role="alert"> Flaw some_fake_uuid not found. <div data-v-fc54c7d5="" class="mt-4">
            <router-link-stub data-v-fc54c7d5="" to="/flaws/new" replace="false" custom="false" ariacurrentvalue="page" viewtransition="false" class="btn btn-primary me-3"></router-link-stub>
            <router-link-stub data-v-fc54c7d5="" to="/" replace="false" custom="false" ariacurrentvalue="page" viewtransition="false" class="btn btn-primary"></router-link-stub>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</main>"
`;

exports[`flawEditView > should render flaw edit form 1`] = `
"<main data-v-fc54c7d5="">
  <flaw-form-stub data-v-fc54c7d5="" flaw="[object Object]" mode="edit"></flaw-form-stub>
  <!--v-if-->
  <!--v-if-->
</main>"
`;

exports[`flawEditView > should render loading icon 1`] = `
"<main data-v-fc54c7d5="">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</main>"
`;
